# MED-live-diagnostics

./: .gitattributes  .readthedocs.yml  .zenodo.json  COPYRIGHT.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.conda/: meta.yaml
.github/workflows/: cd.yml
dev_POC/: dev_model_IO_visualisation.ipynb
docs/: conf.py  environment-doc.yaml  index.rst  med_diagnostics.rst  modules.rst
docs/examples/: example_notebook.ipynb
docs/notebooks/: dev_notebook.ipynb  getting_started_tutorial.ipynb
examples/: example_notebook.ipynb  getting_started.ipynb  med_live_diagnostics.ipynb
src/: med_live_diagnostics.ipynb
src/med_diagnostics/: __init__.py  _version.py  data.py  diagnostics.py  session.py  test.py  ui.py
