[project]
name = "med-diagnostics"
authors = [
    { name = "ACCESS-NRI" },
]
description = "ACCESS MED-Diagnostics"
readme = "README.rst"
license = {text = "APACHE-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["apscheduler", "access-nri-intake", "panel",  "matplotlib"]
dynamic = ["version"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0.0",
  "versioneer[toml]",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/med_diagnostics/_version.py"
versionfile_build = "med_diagnostics/_version.py"
tag_prefix = "v"
parentdir_prefix = "med_diagnostics-"
